--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TechBack</title>
+    <title>TechBack | Giving Back To The Community</title>
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -35,8 +35,11 @@
     <!-- **************
     Video Autoplay
     *************** -->
-    <video playsinline="playsline" autoplay="autoplay" muted="muted" loop="loop"> <source src="1.mp4" type="video/mp4"> 
+    <video playsinline="playsline" autoplay="autoplay" muted="muted" loop="loop"> <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4"> 
+
+    
     </video>
+
 
 
     <!-- *********
@@ -46,7 +49,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"><span>Tech</span>Back</a>
-        <!-- <em>Where Community and Technolofy Intersect</em> -->
+        <!-- <em>Where Community and Technology Intersect</em> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
