--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -49,7 +49,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"><span>Tech</span>Back</a>
-        <!-- <em>Where Community and Technology Intersect</em> -->
+        <!-- <em>"Where Community and Technology Intersect"</em> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -85,6 +85,39 @@
       </div>
     </nav>
 
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="animated fadeInDown" style="animation-delay: 2s">Caption 1</h5>
+            <p class="animated fadeInUp" style="animation-delay: 3s">Paragraph 1</p>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="animated fadeInDown" style="animation-delay: 2s">Caption 2</h5>
+            <p class="animated fadeInUp" style="animation-delay: 3s">Paragraph 2</p>     
+           </div>
+        <div class="carousel-item">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="animated fadeInDown" style="animation-delay: 2s">Caption 3</h5>
+            <p class="animated fadeInUp" style="animation-delay: 3s">Paragraph 3</p>      
+          </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
